fixed homepage column shift bug in ie6 and ie7 mantis:365
git-svn-id: http://svn.topazproject.org/svn/head@2277 48088309-b40f-0410-b149-b14953253675

--- a/plosone/webapp/src/main/webapp/css/pone_home.css
+++ b/plosone/webapp/src/main/webapp/css/pone_home.css
@@ -96,7 +96,7 @@ div.block 				{ margin: 0 3px 6px 3px; padding: 6px; clear: both; position: rela
 div.banner				{ padding: 0; border: none; margin: 4px; }
 div.banner img,
 div.banner object 			{ float: none; margin: 4px; background: transparent; }
-div.banner object			{ padding-top: 0; border: 1px solid #900;}
+div.banner object			{ padding-top: 0; }
 div.partner 				{ text-align: center; margin-right: 0; padding-right: 0; padding-top: 0;border-right: 1px solic #ccc; position: relative; border-top: 1px solic #ccc;}
 div.partner h6			{ font-weight: normal; text-align: center; font-size: .85em; margin: 0 0 0 10px; color: #999;text-transform: uppercase; background: url(../images/pone_home_partner_h6.gif) no-repeat top left; padding-top: 8px;}
 #first div.partner img 			{ float: none; display: block; margin: 20px auto 30px auto; text-align: center;  }
