--- a/plosone/webapp/src/main/webapp/css/pone_iepc.css
+++ b/plosone/webapp/src/main/webapp/css/pone_iepc.css
@@ -44,6 +44,8 @@ IE PC fixes
 
 /* ensures positioning of dropdowns in front of content */
 * html #content { position: relative; z-index: -1; }
+* html #first div.feature { float: right; } /* fixes overlapping content upon page shift */
+
 
 * html div.response div.close a	{ top: 20px;}
 
@@ -67,7 +69,7 @@ html>body #home { height: auto }
 *:first-child+html ul#tabsContainer li span { padding-top: 14px; padding-bottom: 14px;}
 *:first-child+html .multiple .contentwrap { margin-top: -2px;}
 *:first-child+html input#responseTitle	{ margin-left: 22px; }
-
 *:first-child+html div.figure { overflow : hidden; _height : 1%; } /* float clearing for ie7 */
-
-
+*:first-child+html #first div.feature * { position: relative; height: 1%;} /* fixes overlapping content upon page shift */
+*:first-child+html div.banner img,
+*:first-child+html div.banner object { margin-top: 8px; }
